@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Product xmlns='http://code.google.com/p/open-zwave/'>
 	<CommandClass id="112">
-		<Value type="list" index="3" label="Beeper" min="0" max="255" value="255">
+		<Value type="list" genre="config" index="3" label="Beeper" min="0" max="255" value="255">
 			<Help>
 				Enable or disable the beeper.
 			</Help>
@@ -9,7 +9,7 @@
 			<Item label="Enable Beeper" value="255" />
 
 		</Value>
-		<Value type="list" index="4" label="Vacation Mode" min="0" max="255" value="0">
+		<Value type="list" genre="config" index="4" label="Vacation Mode" min="0" max="255" value="0">
 			<Help>
 				Prevents all user codes from unlocking the deadbolt.
 				Enable for extra security while you are away for
@@ -18,17 +18,17 @@
 			<Item label="Disable Vacation Mode" value="0" />
 			<Item label="Enable Vacation Mode" value="255" />
 		</Value>
-		<Value type="list" index="5" label="Lock & Leave" units="" min="0" max="255" value="255">
+		<Value type="list" genre="config" index="5" label="Lock &amp; Leave" units="" min="0" max="255" value="255">
 			<Help>
 				When enabled: Press the Outside Schlage Button to lock the
 				deadbolt. (Default setting).
 				When disabled: Press the Outside Schlage Button and then enter
 				a user code to lock the deadbolt.
 			</Help>
-			<Item label="Disable Lock & Leave" value="0" />
-			<Item label="Enable Lock & Leave" value="255" />
+			<Item label="Disable Lock &amp; Leave" value="0" />
+			<Item label="Enable Lock &amp; Leave" value="255" />
 		</Value>
-		<Value type="list" index="7" label="Lock Alarm Mode" value="0">
+		<Value type="list" genre="config" index="7" label="Lock Alarm Mode" value="0">
 			<Help>
 				The alarm is turned off by default. After installation,
 				you’ll need to turn on your alarm.
@@ -55,9 +55,9 @@
 			<Item label="Alarm Off" value="0" />
 			<Item label="Activity" value="1" />
 			<Item label="Tamper" value="2" />
-			<Item label="Forced Entry" value=3 />
+			<Item label="Forced Entry" value="3" />
 		</Value>
-		<Value type="list" index="8" label="Activity Alarm Sensitivity" value="3">
+		<Value type="list" genre="config" index="8" label="Activity Alarm Sensitivity" value="3">
 			<Help>
 				Each alarm mode is preset to a sensitivity level of three.
 				If your alarm is sounding too frequently, or not frequently enough,
@@ -71,7 +71,7 @@
 			<Item label="Medium/low Sensitivity" value="4" />
 			<Item label="Least Sensitivity" value="5" />
 		</Value>
-		<Value type="list" index="9" label="Tamper Alarm Sensitivity" value="3">
+		<Value type="list" genre="config" index="9" label="Tamper Alarm Sensitivity" value="3">
 			<Help>
 				Each alarm mode is preset to a sensitivity level of three.
 				If your alarm is sounding too frequently, or not frequently enough,
@@ -85,7 +85,7 @@
 			<Item label="Medium/low Sensitivity" value="4" />
 			<Item label="Least Sensitivity" value="5" />
 		</Value>
-		<Value type="list" index="10" label="Forced Entry Alarm Sensitivity" value="3">
+		<Value type="list" genre="config" index="10" label="Forced Entry Alarm Sensitivity" value="3">
 			<Help>
 				Each alarm mode is preset to a sensitivity level of three.
 				If your alarm is sounding too frequently, or not frequently enough,
@@ -99,41 +99,41 @@
 			<Item label="Medium/low Sensitivity" value="4" />
 			<Item label="Least Sensitivity" value="5" />
 		</Value>
-		<Value type="list" index="11" label="Disable Local Alarm Controls" value="255">
+		<Value type="list" genre="config" index="11" label="Disable Local Alarm Controls" value="255">
 			<Help>
 				Enables/Disables local alarm on/off, mode change, sensitivity changes
 			</Help>
 			<Item label="Disable local alarm controls" value="0" />
 			<Item label="Enable local alarm controls" value="255" />
 		</Value>
-		<Value type="int" index="12" read_only="true" label="Electronic transition count" />
-		<Value type="int" index="13" read_only="true" label="Mechanical transition count" />
-		<Value type="int" index="14" read_only="true" label="Electronic failed count">
+		<Value type="int" genre="config" index="12" read_only="true" label="Electronic transition count" />
+		<Value type="int" genre="config" index="13" read_only="true" label="Mechanical transition count" />
+		<Value type="int" genre="config" index="14" read_only="true" label="Electronic failed count">
 			<Help>
 				Each failed electronic attempt increments this count by one.
 			</Help>
 		</Value>
-		<Value type="list" index="15" label="Auto lock" value="0">
+		<Value type="list" genre="config" index="15" label="Auto lock" value="0">
 			<Help>
 				When enabled, the lock will automatically relock 30 seconds
 				after unlocking. (Disabled by default.)
-			<Help>
+			</Help>
 			<Item label="Disable auto lock" value="0" />
 			<Item label="Enable auto lock" value="255" />
 		</Value>
-		<Value type="byte" index="16" label="User code pin length" min="4" max="8" value="4">
+		<Value type="byte" genre="config" index="16" label="User code pin length" min="4" max="8" value="4">
 			<Help>
 				User Code PIN length, a value between 4 and 8. 
 				IMPORTANT: All user codes must be the same length.
 			</Help>
 		</Value>
-		<Value type="int" index="17" label="Electrical High Preload Transition Count" read_only="true">
+		<Value type="int" genre="config" index="17" label="Electrical High Preload Transition Count" read_only="true">
 			<Help>
 				A subset of Electronic transition count, the number of transitions
 				with high preload.
 			</Help>
 		</Value>
-		<Value type="byte" index="18" label="Bootloader Version" read_only="true">
+		<Value type="byte" genre="config" index="18" label="Bootloader Version" read_only="true">
 			<Help>The version of the bootloader</Help>
 		</Value>
 	</CommandClass>
